# swift_ai_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SWIFT_AI_Agent_결과보고서.docx  docker-compose.yml  plan.md  pyproject.toml
.pytest_cache/v/cache/: lastfailed  nodeids
app/: llm.py  main.py
app/agents/: analyzer.py  explainer.py  generator.py  mapper.py  schema_explorer.py
app/audit/: logger.py
app/graph/: graph.py  state.py  supervisor.py
app/hitl/: checkpoint.py
app/pii/: masker.py  pii.md  vault.py
app/prompts/: analyzer_prompts.py  explainer_prompts.py  generator_prompts.py  mapper_prompts.py  schema_explorer_prompts.py
app/rag/: chunker.py  indexer.py  retriever.py  xsd_parser.py
app/static/: index.html
app/templates/: pacs_008.xml.j2
app/validation/: prowide_client.py  reconciler.py
data/: acmt_messages.json  check_mx_downloads.py  find_catalog.py  find_do_export.py  find_export_flow.py  find_export_get.py  find_export_post.py  find_export_type.py  find_export_uuid.py  find_js_uuid.py  find_uuid_api.py  gen_acmt_messages.py  gen_all_messages.py  get_mydownloads.py  msg_descriptions.json  mt_download.py  mx_download.py  test_export_get.py  uuid_cache.json
data/XSD/archive_business_area_securities_events_15d4118c32/: seev.060.001.01.xsd  seev.061.001.01.xsd  seev.062.001.01.xsd  seev.066.001.01.xsd
data/XSD/archive_business_area_securities_events_15d4118c32 (1)/: seev.063.001.01.xsd  seev.064.001.01.xsd  seev.065.001.01.xsd  seev.067.001.01.xsd
data/messages/: acmt_messages.json  admi_messages.json  auth_messages.json  caaa_messages.json  caad_messages.json  caam_messages.json  cafc_messages.json  cafm_messages.json  cafr_messages.json  cain_messages.json  camt_messages.json  canm_messages.json  casp_messages.json  casr_messages.json  catm_messages.json  catp_messages.json  cbrf_messages.json  colr_messages.json  fxtr_messages.json  head_messages.json  mirs_messages.json  pacs_messages.json  pain_messages.json  reda_messages.json  remt_messages.json  secl_messages.json  seev_messages.json  semt_messages.json  sese_messages.json  setr_messages.json  supl_messages.json  trck_messages.json  trea_messages.json  tsin_messages.json  tsmt_messages.json  tsrv_messages.json
prowide-svc/: Dockerfile  pom.xml
prowide-svc/src/main/java/com/swift/prowide/: ProwideApplication.java
prowide-svc/src/main/java/com/swift/prowide/controller/: SchemaController.java  ValidationController.java
prowide-svc/src/main/resources/: application.yml
scripts/: gen_msg_descriptions.py  ingest_guidebook.py  ingest_mt_all.py  ingest_mx_all.py  setup_qdrant.py
tests/: test_agents.py  test_analyzer.py  test_e2e.py  test_pii.py  test_prowide_validation.py  test_rag.py  test_validation.py
(+2 files in other folders)
