[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swift-ai-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # LangGraph / LangChain
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",

    # LLM client (vLLM compatible OpenAI API)
    "openai>=1.30",

    # Vector DB — qdrant server v1.13+ 필요 (query_points + Prefetch + FusionQuery/RRF)
    "qdrant-client>=1.13",

    # LangChain OpenAI integration — with_structured_output() 사용
    "langchain-openai>=0.2",

    # LangChain Anthropic integration — Claude API (claude-3-5-haiku / sonnet / opus)
    "langchain-anthropic>=0.3",

    # Jinja2 — XML 템플릿 렌더링 (generator fallback)
    "jinja2>=3.1",

    # Embeddings / Reranker
    "FlagEmbedding>=1.2",

    # PDF processing
    "pymupdf>=1.24",

    # PII masking
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",

    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",

    # HTTP client
    "httpx>=0.27",

    # Data validation
    "pydantic>=2.7",

    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
